# app/Models/User.php
@@ -82,4 +82,12 @@ class User extends Authenticatable implements JWTSubject
     {
         return $this->hasMany(Unit::class)->orderBy('unit_id', 'desc');
     }
+    public function lessons()
+    {
+        return $this->hasMany(Lesson::class)->orderBy('lesson_id', 'desc');
+    }
+    public function exercises()
+    {
+        return $this->hasMany(Exercise::class)->orderBy('exercise_id', 'desc');
+    }
 }
